--- a/EntityFramework.PrimaryKey/EntityFramework.PrimaryKey.csproj
+++ b/EntityFramework.PrimaryKey/EntityFramework.PrimaryKey.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Extensions.cs" />
     <Compile Include="PrimaryKey.cs" />
+    <Compile Include="PrimaryKeyDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
